--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,45 @@
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                     <span class="bg-blue-500 text-white px-2.5 py-1.5 rounded-sm" x-text="row"></span>
                   </td>
-                  
                   <template x-for="col in def.cols" :key="col">
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800" x-html="JSON.stringify(def.map[makeKey(col,row)])"></td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 width-200">
+                      <article class="rounded-xl border-2 border-gray-100 bg-white">
+                        <div class="flex items-start gap-4 p-4 sm:p-6 lg:p-8">
+                          <div>
+                            <h3 class="font-medium sm:text-lg" x-text="def.map[makeKey(col,row)].version"></h3>
+
+                            <p class="line-clamp-2 text-sm text-gray-700" ></p>
+
+                            <div class="mt-2 sm:flex sm:items-center sm:gap-2">
+                              <div class="flex items-center gap-1 text-gray-500">
+                                <svg
+                                  xmlns="http://www.w3.org/2000/svg"
+                                  class="size-4"
+                                  fill="none"
+                                  viewBox="0 0 24 24"
+                                  stroke="currentColor"
+                                  stroke-width="2"
+                                >
+                                  <path
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z"
+                                  />
+                                </svg>
+
+                                <p class="text-xs" x-text="def.map[makeKey(col,row)].deployer"></p>
+                              </div>
+
+                              <span class="hidden sm:block" aria-hidden="true">&middot;</span>
+
+                              <p class="hidden sm:block sm:text-xs sm:text-gray-500 italic"
+                                x-data="{date: new Date(def.map[makeKey(col,row)].created_at)}"
+                                x-text="date.toLocaleString()"></p>
+                            </div>
+                          </div>
+                        </div>
+                      </article>
+                    </td>
                   </template>
                 </tr>
               </template>
@@ -39,7 +75,6 @@
       </div>
     </div>
   </div>
-  
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"></script>
   <script type="module" src="/main.js"></script>
